--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.0.2",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.4.5"
   },
   "keywords": [
