--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   },
   "main": "./bin/www",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
     "colors": "^1.1.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-validator": "^4.3.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.2",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "socketio": "^1.0.0"
   },
   "keywords": [
     "express",
