--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "express-validator": "^4.3.0",
+    "express-joi-validator": "^2.0.0",
     "jade": "~1.11.0",
+    "joi": "^13.1.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.2",
     "morgan": "~1.9.0",
