--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "serve-favicon": "~2.4.5",
-    "socketio": "^1.0.0"
+    "socket.io": "^2.0.4",
+    "socketio-jwt": "^4.5.0"
   },
   "keywords": [
     "express",
