--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
+    "ejs": "^2.5.7",
+    "ejs-locals": "^1.0.2",
     "express": "~4.15.5",
     "express-joi-validator": "^2.0.0",
-    "jade": "~1.11.0",
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.2",
