--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
 			"moderator": 1,
 			"user": 0
 		},
-		"secretAuthKey": "secret"
+		"secretAuthKey": "secret",
+		"expires": 86400
 	},
 	"errorMessages": {
 		"authentication": {
