--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"dbUrl": "mongodb://localhost/VueExpress",
+	"dbUrl": "mongodb://localhost/SPA_blog_v2",
 	"port": "8889",
 	"private": {
 		"access": {
