--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
 		"expires": 86400
 	},
 	"chat": {
-		"loadMessagesSkip" : 25
+		"loadLimit" : 20
 	},
 	"errorMessages": {
 		"authentication": {
