--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.0.2",
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
+    "npm": "^5.7.1",
     "serve-favicon": "~2.4.5",
     "sharp": "^0.20.0",
     "socket.io": "^2.0.4",
