--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
     "colors": "^1.1.2",
+    "compression": "^1.7.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
@@ -17,6 +18,7 @@
     "ejs-locals": "^1.0.2",
     "express": "~4.15.5",
     "express-joi-validator": "^2.0.0",
+    "helmet": "^3.12.0",
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.2",
