--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "serve-favicon": "~2.4.5",
     "sharp": "^0.20.1",
     "socket.io": "^2.0.4",
-    "socketio-jwt": "^4.5.0"
+    "socketio-jwt": "^4.5.0",
+    "striptags": "^3.1.1"
   },
   "keywords": [
     "express",
