--- a/config.json
+++ b/config.json
@@ -11,7 +11,12 @@
 		"expires": 86400
 	},
 	"chat": {
-		"loadLimit" : 35
+		"loadLimit" : 35,
+		"messageType": {
+			"text": 0,
+			"image": 1,
+			"file": 2
+		}
 	},
 	"upload": {
 		"maxFileSizeMb": 10
